--- a/Week 1 HL/myactivity.html
+++ b/Week 1 HL/myactivity.html
@@ -31,8 +31,8 @@
 			<details>
 				<summary>My Friends</summary>
 				<p>	Oh yes... my friends are geek too..<br/><br/>
-					<img src="https://lh3.googleusercontent.com/proxy/XC93V-6IbYR6sr4vU511nafG47ciAbukepoulyhzWHT59mZ3VYyUP4SlSlsKu1hBvTtB8I8ZLQM_myy8Z-997WA99OIpZa9VaG4a6UU" 
-			alt="Image of geeky friends from googleusercontent.com" />
+					<img src="http://clipart-library.com/image_gallery/n1968796.jpg" 
+			alt="Image of geeky friends from clipart-library.com" />
 				</p>
 			</details>
 			<details>
